--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>hello world</title>
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>my project</h1>
     <div class="block">
         <div class="block_color">
             <button>click me</button>
