notebook index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>my project</h1>
+    <div>some block</div>
     <div class="block">
         <div class="block_color">
             <button>click me</button>
