--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <h1>my project</h1>
+    <h1>this project</h1>
     <div>some block</div>
     <div class="block">
         <div class="block_color">
