--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>this project</h1>
-    <div>some block</div>
+    <h2>some text</h2>
     <div class="block">
         <div class="block_color">
             <button>click me</button>
